--- a/interview/styles.css
+++ b/interview/styles.css
@@ -4,21 +4,25 @@ body {
 
 h1 {
     color: Black;
-    font-size: 40px;
+    font-size: 100px;
     font-weight: bold;
-    font-family: Times, arial, Helvetica, sans-serif;
-    background-color: Yellow;
-    width: 250px;
-    padding: 10px
-    margin: 10px;
+    font-family: Courier;
+    background-color: Grey;
 }
 
 p1 {
-    color: white;
-    font-size: 20px;
+    color: Black;
+    font-size: 50px;
+    font-family: Courier;
+    background-color: Grey;
 }
 
 ul {
     color: white
-    font-size: 50px;
+    font-size: 80px;
+    font-family: Courier;
+}
+
+h2 {
+    font-family: Courier;
 }
