--- a/interview/styles.css
+++ b/interview/styles.css
@@ -17,6 +17,14 @@ p2 {
     background-color: Grey;
 }
 
+p1 {
+    color: Black;
+    font-size: 30px;
+    font-family: Courier;
+    background-color: Grey;
+}
+    ;
+}
 ul {
     color: white
     font-size: 80px;
