--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ h1 {
     color: white;
     font-size: 100px;
     font-weight: bold;
-    font-family: Times, arial, Helvetica, sans-serif;
+    font-family: Times, arial, Helvetica, sans-serif
 }
 
 p1 {
@@ -18,4 +18,9 @@ p1 {
 ul {
     color: white;
     font-size: 35px;
+}
+
+a {
+    color: white;
+    text-decoration: none;
 }
