--- a/compositions/c1style.css
+++ b/compositions/c1style.css
@@ -258,6 +258,15 @@ div {
     top: 100px;
     left: 100px;
 }
+.container4 {
+    width: 100px;
+    height: 1300px;
+    font-size: 0px;
+    background-color:white;
+    top: 7px;
+    left: 1100px;
+    position: absolute;
+}
 
 .circle21 {
     width: 30px;
