--- a/jquery_exercise/css/style.css
+++ b/jquery_exercise/css/style.css
@@ -38,6 +38,12 @@ body, html {
 	display: none;
 }
 
+#pirate {
+	position: fixed;
+	top:40px;
+	left: 0;
+}
+
 #keys {
 	border:4px solid black;
 	padding:20px;
