--- a/javacompositions/composition2/css/main.css
+++ b/javacompositions/composition2/css/main.css
@@ -95,25 +95,33 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
-
-
-
-.circle {
-    width: 100px;
-    background-color:blue;
+.go {
+    width: 200px;
     height: 100px;
+    background-color: black;
+    display: inline-block;
+    margin: 20px;
+    vertical-align: middle;
     border-radius: 100%;
-    display:inline-block;
-    font-size:30px;
-    line-height: 100px;
-    color: white;
-    text-align: center;
-    position: absolute;
+    text-align:center;
+    font-size:10px;
+    color:black;
 }
 
 
 
-
+.ball {
+    width: 50px;
+    height: 50px;
+    background-color: lightblue;
+    display: inline-block;
+    margin: 24px;
+    vertical-align: middle;
+    border-radius: 100%;
+    text-align:center;
+    font-size:10px;
+    color:black;
+}
 
 
 
