--- a/compositions/c1style.css
+++ b/compositions/c1style.css
@@ -103,7 +103,7 @@ div {
 .circle9 {
     width: 300px;
     height: 100px;
-    background-color:gree;
+    background-color:grey;
     border-radius: 100%;
     position: fixed;
     top: 900px;
